fix layout on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,7 +654,8 @@ nav.navbar.bootsnav .navbar-toggle i {
     align-items: center;
     justify-content: center;
     padding: 0 30px;
-    height: 220px;
+    height: auto;
+    /* 220px */
     border-bottom: 1px solid #dadfe9;
     background-color: #fff;
 }
